--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,21 +1,24 @@
-server.port=8080
+# Server Configuration
+server.port=${PORT:8080}
 
-# H2 Database
-spring.datasource.url=jdbc:h2:mem:portfolio_db;DB_CLOSE_DELAY=-1
-spring.datasource.username=Portfilio
-spring.datasource.password=1234
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Database Configuration - Uses PostgreSQL in production, H2 locally
+spring.datasource.url=${DATABASE_URL:jdbc:h2:mem:portfolio_db;DB_CLOSE_DELAY=-1}
+spring.datasource.username=${DB_USERNAME:Portfilio}
+spring.datasource.password=${DB_PASSWORD:1234}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 
-# JWT
-jwt.secret=MySecurePortfolioJWTSecretKey2024ForProductionUseOnly12345
+# JWT Configuration
+jwt.secret=${JWT_SECRET:MySecurePortfolioJWTSecretKey2024ForProductionUseOnly12345}
 jwt.expirationMs=3600000
 
-# CORS for React
-cors.allowed.origin=http://localhost:3000
+# CORS Configuration
+cors.allowed.origins=${CORS_ORIGIN:http://localhost:3000,http://127.0.0.1:3000}
 
-# H2 console
-spring.h2.console.enabled=true
+# H2 Console (disabled in production)
+spring.h2.console.enabled=${H2_CONSOLE_ENABLED:true}
 spring.h2.console.path=/h2-console
+
+# Production Profile Settings
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
