--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ["maven", "jdk17"]
 
 [phases.build]
-cmds = ["mvn clean install -DskipTests"]
+cmds = ["cd Backend && mvn clean install -DskipTests"]
 
 [phases.start]
-cmd = "java -Dserver.port=$PORT -jar target/portfolio-backend-1.0.0.jar"
+cmd = "cd Backend && java -Dserver.port=$PORT -jar target/portfolio-backend-1.0.0.jar"
