--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -22,3 +22,8 @@ spring.h2.console.path=/h2-console
 
 # Production Profile Settings
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
+
+# Actuator Configuration
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=when-authorized
+management.health.defaults.enabled=true
