--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,17 +1,18 @@
 # Multi-stage build for Spring Boot application
+# Updated: Files are now relative to Backend folder
 FROM maven:3.9-eclipse-temurin-17 AS build
 
 # Set working directory
 WORKDIR /app
 
 # Copy pom.xml first for better caching
-COPY Backend/pom.xml .
+COPY pom.xml .
 
 # Download dependencies (this layer will be cached if pom.xml hasn't changed)
 RUN mvn dependency:go-offline -B
 
 # Copy source code
-COPY Backend/src ./src
+COPY src ./src
 
 # Build the application (skip tests for faster builds)
 RUN mvn clean package -DskipTests
