--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -3,10 +3,9 @@ server.port=${PORT:8080}
 
 # Database Configuration - Uses PostgreSQL in production, H2 locally
 spring.datasource.url=${DATABASE_URL:jdbc:h2:mem:portfolio_db;DB_CLOSE_DELAY=-1}
-spring.datasource.username=${DB_USERNAME:Portfilio}
-spring.datasource.password=${DB_PASSWORD:1234}
+spring.datasource.driver-class-name=${DB_DRIVER:org.h2.Driver}
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.defer-datasource-initialization=true
 
 # JWT Configuration
@@ -25,5 +24,6 @@ spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
 # Actuator Configuration
 management.endpoints.web.exposure.include=health,info
-management.endpoint.health.show-details=when-authorized
+management.endpoint.health.show-details=always
 management.health.defaults.enabled=true
+management.health.db.enabled=true
