fix backend errors 2

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.driver-class-name=${DB_DRIVER:org.h2.Driver}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=${SQL_INIT_MODE:always}
+spring.sql.init.continue-on-error=true
 
 # JWT Configuration
 jwt.secret=${JWT_SECRET:MySecurePortfolioJWTSecretKey2024ForProductionUseOnly12345}
