fix network errors 3

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -3,11 +3,11 @@ server.port=${PORT:8080}
 
 # Database Configuration - Uses PostgreSQL in production, H2 locally
 spring.datasource.url=${DATABASE_URL:jdbc:h2:mem:portfolio_db;DB_CLOSE_DELAY=-1}
-spring.datasource.driver-class-name=${DB_DRIVER:org.h2.Driver}
+spring.datasource.driver-class-name=${DB_DRIVER:org.postgresql.Driver}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=${SQL_INIT_MODE:always}
+spring.sql.init.mode=${SQL_INIT_MODE:never}
 spring.sql.init.continue-on-error=true
 
 # JWT Configuration
