--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,34 +1,11 @@
-# Multi-stage build for Spring Boot application
-# Updated: Files are now relative to Backend folder
-FROM maven:3.9-eclipse-temurin-17 AS build
-
-# Set working directory
-WORKDIR /app
-
-# Copy pom.xml first for better caching
-COPY pom.xml .
-
-# Download dependencies (this layer will be cached if pom.xml hasn't changed)
-RUN mvn dependency:go-offline -B
-
-# Copy source code
-COPY src ./src
-
-# Build the application (skip tests for faster builds)
+# Stage 1: Build
+FROM maven:3.8.5-openjdk-17 AS build
+COPY . .
 RUN mvn clean package -DskipTests
 
-# Runtime stage with smaller JDK image
-FROM eclipse-temurin:17-jre
-
-# Set working directory
-WORKDIR /app
-
-# Copy the built JAR from build stage
-COPY --from=build /app/target/*.jar app.jar
-
-# Expose port (Railway will override this with PORT env variable)
+# Stage 2: Run
+FROM openjdk:17.0.1-jdk-slim
+COPY --from=build /target/portfolio-backend-1.0.0.jar app.jar
 EXPOSE 8080
-
-# Run the application with PORT support
 ENV PORT=8080
-ENTRYPOINT ["sh", "-c", "java -Dserver.port=${PORT} -jar app.jar"]
+ENTRYPOINT ["sh", "-c", "java -Dserver.port=${PORT} -jar /app.jar"]
