fix backend errors 5

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,11 +1,13 @@
-# Stage 1: Build
-FROM maven:3.8.5-openjdk-17 AS build
-COPY . .
+# Build stage
+FROM maven:3.9-eclipse-temurin-17 AS build
+WORKDIR /app
+COPY pom.xml .
+COPY src ./src
 RUN mvn clean package -DskipTests
 
-# Stage 2: Run
-FROM openjdk:17.0.1-jdk-slim
-COPY --from=build /target/portfolio-backend-1.0.0.jar app.jar
+# Run stage
+FROM eclipse-temurin:17-jre-alpine
+WORKDIR /app
+COPY --from=build /app/target/portfolio-backend-1.0.0.jar app.jar
 EXPOSE 8080
-ENV PORT=8080
-ENTRYPOINT ["sh", "-c", "java -Dserver.port=${PORT} -jar /app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
