fix network errors 6

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,12 +1,12 @@
-# Build stage - Updated for Railway deployment
-FROM maven:3.9-eclipse-temurin-23 AS build
+# Build stage - Updated for Railway deployment with Java 21
+FROM maven:3.9-eclipse-temurin-21 AS build
 WORKDIR /app
 COPY pom.xml .
 COPY src ./src
 RUN mvn clean package -DskipTests
 
 # Run stage
-FROM eclipse-temurin:23-jre-alpine
+FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
 COPY --from=build /app/target/portfolio-backend-1.0.0.jar app.jar
 EXPOSE 8080
