--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=${DB_DRIVER:org.h2.Driver}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=${SQL_INIT_MODE:never}
+spring.sql.init.mode=${SQL_INIT_MODE:always}
 spring.sql.init.continue-on-error=true
 
 # JWT Configuration
