--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -14,6 +14,8 @@
 
     <properties>
         <java.version>21</java.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <spring.boot.version>3.2.0</spring.boot.version>
         <lombok.version>1.18.30</lombok.version>
         <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
@@ -110,6 +112,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.portfolio.PortfolioApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
