--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -5,10 +5,12 @@ server.port=${PORT:8080}
 spring.datasource.url=${DATABASE_URL:jdbc:h2:mem:portfolio_db;DB_CLOSE_DELAY=-1}
 spring.datasource.driver-class-name=${DB_DRIVER:org.h2.Driver}
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=${SQL_INIT_MODE:always}
 spring.sql.init.continue-on-error=true
+logging.level.org.springframework.jdbc.datasource.init=DEBUG
 
 # JWT Configuration
 jwt.secret=${JWT_SECRET:MySecurePortfolioJWTSecretKey2024ForProductionUseOnly12345}
