--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,9 @@
     <description>Portfolio backend application</description>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <spring.boot.version>3.2.0</spring.boot.version>
         <lombok.version>1.18.30</lombok.version>
         <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
@@ -104,6 +106,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.portfolio.PortfolioApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
