Fix CORS for Vercel and update contact info display on frontend

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -17,7 +17,7 @@ jwt.secret=${JWT_SECRET:MySecurePortfolioJWTSecretKey2024ForProductionUseOnly123
 jwt.expirationMs=3600000
 
 # CORS Configuration
-cors.allowed.origins=${CORS_ORIGIN:http://localhost:3000,http://127.0.0.1:3000,https://portfolio-git-main-jayaru2003s-projects.vercel.app}
+cors.allowed.origins=${CORS_ORIGIN:http://localhost:3000,http://127.0.0.1:3000,https://portfolio-git-main-jayaru2003s-projects.vercel.app,https://*.vercel.app}
 
 # H2 Console (disabled in production)
 spring.h2.console.enabled=${H2_CONSOLE_ENABLED:true}
